# fig

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  fig.code-workspace
doc/: README.md  cmake-notes.md  coding-standards.md  cross-platform.md  design.md  dev-log.md
include/: README.md
lib/: README.md
proj/: README.md
src/: CMakeLists.txt  CMakeSettings.json  FigConfig.h.in  README.md  macros.cmake
src/core/: IFigTree.h
src/fig-cli/: CMakeLists.txt
src/fig-core/: CMakeLists.txt  IFigTree.h  fig_key.h  fig_value.h
src/fig-coredyn/: CMakeLists.txt  coredyn.cpp
src/fig-util/: CMakeLists.txt  README.md  conversion_helpers.h  error.h  macros.h  result.h  result_error.h  string_converter.h  string_helpers.h
src/test/: CMakeLists.txt  CMakeLists.txt.in
src/test/fig-core-test/: CMakeLists.txt  fig_key-test.cpp  fig_value-test.cpp
src/test/fig-util-test/: CMakeLists.txt  fig-util-test.cpp  macros-test.cpp  result-test.cpp  string_converter-test.cpp  string_helpers-test.cpp
test/: README.md
